update navigations at index page

--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
                       Dining
                     </a>
                     <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="#">Restaurant</a></li>
-                      <li><a class="dropdown-item" href="#">Bar & Lounge</a></li>
+                      <li><a class="dropdown-item" href="/pages/restaurant.html">Restaurant</a></li>
+                      <li><a class="dropdown-item" href="/pages/bar-lounge.html">Bar & Lounge</a></li>
                       <li><a class="dropdown-item" href="#rooms">Room Service</a></li>
                     </ul>
                   </li>
@@ -77,9 +77,9 @@
                       Spa
                     </a>
                     <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="#">Spa Treatments</a></li>
-                      <li><a class="dropdown-item" href="#">Wellness Packages</a></li>
-                      <li><a class="dropdown-item" href="#">Book an Appointment</a></li>
+                      <li><a class="dropdown-item" href="/pages/spa-treatment.html">Spa Treatments</a></li>
+                      <li><a class="dropdown-item" href="/pages/wellness-packages.html">Wellness Packages</a></li>
+                      <li><a class="dropdown-item" href="/pages/book-appointment.html">Book an Appointment</a></li>
                     </ul>
                   </li>
                   <li class="nav-item">
